    XHTML.
 - XML comments should now be exported correctly.
 - Upped maximum pagerange field width to 120 from 10.
 - Fixed typo in system phrases.

======================================================================
06/07/2004 - EPRINTS-2.3.4
======================================================================

2004-08-06 cjg

 - Added Hungarian chars to freetext index map
 - New options to indexer --once, --notdaemon, --loglevel, --rollcount
 - Indexer now creates log files
 - Commented-out un-needed command in SearchExpression
 - Fixed xmlns filtering so it only occurs on XHTML output, not XML
 - Fixed a call in Config to use AnApache, so it'll work with v1.3 & 2
 - Fixed a bug in MetaField/Set; it didn't show the currently 
    selected value in any/all menus.
 - documents_url option removed. It's hardwired to /archive/ in lots
    of places.
 - Added support for short URLs for records, so you can use
    /33/ instead of /archive/00000033/
 - added config option 'shorturl' to make the short version the
    canonnical one. 

2004-08-06 cjg

 - Added code to SQL prepare and do so that it tries to reconnect
    if the mysql connection goes away (not yet for 'execute' however)
 - Modified Fulltext field type to cache extracted index codes to
    reduce CPU load.

2004-08-06 cjg

 - Fixed spelling mistake in Fulltext.pm
 - Made noxmlns actually cause/not cause xmlns to be stripped in
    XML to_string (bug fix)

======================================================================
06/08/2004 - EPRINTS-2.3.5
======================================================================

2004-08-09 cjg

 - Fixed a bug introduced last version which failed to render buttons
    which id's started with "_". (Such as those on the staff eprint
    edit page.)

======================================================================
09/08/2004 - EPRINTS-2.3.6
======================================================================
